frontend/frontend/src/components/Services/components/SearchServices.css
.search-services {
    padding-inline: min(5vw, 5rem);
    padding-block: 1.5rem min(8vh, 8rem);
    background-color: var(--bc-lightBlue);
    color: white;
    
    
}

.search-header-wrapper {
    margin-bottom: 1rem;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: .5rem;

}
.search-header-wrapper h3 {
    /* font-size: var(--fs-fortyEight); */
    font-size: clamp(var(--fs-thirtySix), 3.75vw,var(--fs-fortyEight));
    margin: 0 auto;
}

.search-header-wrapper > span {
    font-size: clamp(var(--fs-sixteen), 1.5vw, var(--fs-eighteen));
    max-width: 800px;
    text-align: left;


}

.search-services-card-wrapper {
    gap: 1rem;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(auto-fit, minmax(10rem, 2fr));
    width: 100%;
    max-width: 1100px;
    margin: 0 auto;
}

.card {

    padding: min(1.5vw, 1.5rem) min(1.5vw, 1.5rem);
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    line-height: 1.5;
    text-align: left;
    align-items: center;
    /* border: 1px solid white; */
}

.card.negotiation {
    /* border: 1px solid white; */
    justify-content: start;
}

.icon {

    max-height: 5rem;
    max-width: 6rem;
    stroke: white;
    display: block;
    border-radius: 2rem;

}




.card h4 {
    /* border: 1px solid red; */
    margin-block: .5rem;
    font-size: clamp(var(--fs-eighteen), 1.125vw, var(--fs-twentyFour))
}

.card p {
    margin-block: .5rem;

}


/* 1200px */
@media (max-width: 75em) {

    .search-services-card-wrapper {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(40%, 1fr));
        

    }

    .search-header-wrapper span {
        font-size: clamp(var(--fs-eighteen), 1.5vw, var(--fs-twentyFour));
    }

    .card {
        padding: min(3vh, 3rem) min(3vw, 3rem);
        height: 40vh;
    }



    .card h4 {
        font-size: clamp(var(--fs-twentyFour), 1.875vw, var(--fs-thirty));
        text-align: center;
    }

    .card p {
        margin: 0;
        padding: min(.5vw, .5rem) min(1vw, 1rem);
    }



}
/* 900px */
@media (max-width: 56.25em) {

    .search-services {
        padding-inline: min(4vw, 4rem);
    }

    .search-header-wrapper {
        display: flex;

    
    }

    .search-header-wrapper > span {
        font-size: 1rem;
        max-width: 500px;
 
    }

    
    .search-services-card-wrapper {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
        grid-template-rows: repeat(4, 1fr)
    }

    .card {
        padding: min(2vh, 2rem) min(2vw, 2rem);
        /* text-align: justify; */
        text-align: left;
        text-wrap: pretty;
        align-items: left;
        max-height: 30vh;

    }


    .card h4 {
        font-size: clamp(var(--fs-twentyFour), 2vw, var(--fs-thirty));
        max-width: 450px;


    }

    .card p {
        /* font-size: clamp(var(--fs-twentyFour), 1.875vw, var(--fs-thirty)); */
        margin: 0;
        padding: min(1vw, 1rem) min(1vw, 1rem);
        
    }
    
    .icon {
        width: 4.5rem;
        height: 4.5rem;
    }
}


/* 600px */
@media (max-width: 37.5em) {

     .card {
        max-height: 50vh;
     }

     .icon {
        margin-block: 0;
     }
}


/* 400px */

@media (max-width: 25em) {
    .card > p {
        font-size: .9rem;
    }
}

